# rvv-intrinsics-cpp

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
cmake/: FindClangFormat.cmake
compile_test/: macros.h
compile_test/fixed/: averaging.cpp  clip.cpp  fractional_multiply.cpp  saturating.cpp  scaling_shift.cpp
compile_test/fp/: abs.cpp  classify.cpp  compare.cpp  fma.cpp  merge.cpp  min_max.cpp  move.cpp  mul_div.cpp  narrowing_convert.cpp  reciprocal_squar_root.cpp  sign_injection.cpp  single_width_add_sub.cpp  single_width_convert.cpp  sqrt.cpp  widening_add_sub.cpp  widening_convert.cpp  widening_fma.cpp  widening_mul.cpp
compile_test/int/: adc_sbc.cpp  compare.cpp  divide.cpp  extension.cpp  logical.cpp  merge.cpp  min_max.cpp  move.cpp  narrowing.cpp  narrowing_integer_right_shift.cpp  single_width_add_and_subtract.cpp  single_width_bit_shift.cpp  single_width_integer_multiply_add.cpp  single_width_multiply.cpp  widening.cpp  widening_add_and_subtract.cpp  widening_multiply.cpp  widening_multiply_add.cpp
compile_test/load_store/: indexed.cpp  indexed_load.cpp  mask.cpp  non_indexed.cpp  non_indexed_load.cpp
compile_test/load_store_segment/: indexed.cpp  indexed_load.cpp  non_indexed.cpp  non_indexed_load.cpp
compile_test/macros/: for_each.h  op_test_base.h  type.h
compile_test/mask/: count.cpp  find_first.cpp  id.cpp  iota.cpp  logical.cpp  set.cpp
compile_test/misc/: create.cpp  setvl.cpp  undefined.cpp  vget.cpp  vreinterpret.cpp  vset.cpp
compile_test/perm/: compress.cpp  move.cpp  slide1.cpp  slidedown.cpp  slideup.cpp  vrgather.cpp
compile_test/reduce/: single_width_fp.cpp  single_width_int.cpp  widening_fp.cpp  widening_int.cpp
generator/: gen_fixed_h.py  gen_fp_h.py  gen_int_h.py  gen_load_store_h.py  gen_load_store_segment_h.py  gen_mask_h.py  gen_misc_h.py  gen_perm_h.py  gen_reduce_h.py  gen_type_inc.py
generator/codegen/: constraints.py  cpp_repr.py  func.py  func_obj.py  guarded.py  header.py  ident.py  macro.py  main.py  ops.py  validate.py
generator/codegen/param_list/: function.py  param_list.py  template.py
generator/codegen/type/: elem.py  lmul.py  misc.py  type.py  vl.py  vmask.py  vreg.py
generator/codegen/typing/: base.py  elem.py  kind.py  lmul.py  misc.py  vl.py  vmask.py  vreg.py  vtuple.py
include/rvv/: config.h  conversion.h  elem.h  type.h  type_traits.h
pytest/: test_gen_fixed_h.py  test_gen_fp_h.py  test_gen_int_h.py  test_gen_load_store_h.py  test_gen_mask_h.py  test_gen_misc_h.py
pytest/codegen/: test_constraints.py  test_cpp_repr.py  test_func.py  test_guarded.py  test_header.py  test_macro.py  test_ops.py  test_validate.py
pytest/codegen/param_list/: test_function.py  test_template.py
pytest/codegen/type/: test_elem.py  test_kind.py  test_misc.py  test_type.py  test_vl.py  test_vmask.py  test_vreg.py
test/: conversion_test.cpp  conversion_type.cpp  type_test.cpp  type_traits_test.cpp
test/misc/: test_setvl.cpp
